--- a/engine/Dockerfile
+++ b/engine/Dockerfile
@@ -4,6 +4,8 @@ FROM python:3.12-slim
 # Set the working directory in the container
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y ffmpeg
+
 # Install Pipenv
 RUN pip install pipenv
 
@@ -16,12 +18,5 @@ RUN pipenv install --deploy --ignore-pipfile
 # Copy the rest of your app's source code from your host to your image filesystem.
 COPY . /app
 
-# Make port 5000 available to the world outside this container
-EXPOSE 5000
-
-# Define environment variable
-ENV FLASK_ENV=development
-ENV FLASK_APP=app.py
-
 # The CMD should use Pipenv to run the Flask app
-CMD ["pipenv", "run", "flask", "run", "--host=0.0.0.0"]
+CMD ["pipenv", "run", "python", "./app.py"]
