--- a/device/engine/Pipfile
+++ b/device/engine/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-opencv-python = "*"
+requests = "*"
+paho-mqtt = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.12"
+python_version = "3.10"
