--- a/engine/.env.example
+++ b/engine/.env.example
@@ -2,4 +2,4 @@ AWS_ACCESS_KEY=your_access_key
 AWS_SECRET_KEY=your_secret_key
 S3_BUCKET=your_bucket_name
 THINGSBOARD_URL=http://your-thingsboard-url
-THINGSBOARD_TOKEN=your_access_token
+PORT=5000
