--- a/thingsboard/tb-widget-core/package.json
+++ b/thingsboard/tb-widget-core/package.json
@@ -4,17 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "chokidar \"src/**/*.svelte\" \"src/**/*.json\" -c \"npm run build\"",
+    "dev": "chokidar \"src/**/*.svelte\" \"src/**/*.json\" -c \"npm run build -- -- --widget={path}\"",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.600.0",
+    "@smui/data-table": "^7.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/node": "^20.14.8",
     "axios": "^1.7.2",
+    "carbon-components-svelte": "^0.85.0",
     "moment": "^2.30.1",
+    "pretty-bytes": "^6.1.1",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.1",
     "tslib": "^2.6.3",
@@ -24,6 +28,8 @@
   },
   "dependencies": {
     "chokidar": "^3.6.0",
-    "chokidar-cli": "^3.0.0"
+    "chokidar-cli": "^3.0.0",
+    "rollup": "^4.18.0",
+    "svelte-material-ui": "^7.0.0"
   }
 }
